--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body{
 .title p{
     text-shadow: 3px 3px black;
 }
+body.mobile .title{
+    font-size: large;
+    left: 50px;
+}
+
 #shelf_div{
     position: absolute;
     top: -20px;
@@ -50,6 +55,10 @@ body{
     width: 80%;
     margin-left: 10%;
 }
+body.mobile #side_by_side{
+    width: 90%;
+    margin: 5%;
+}
 #calendar_div{
     height: 600px;
     padding-bottom: 100px;
@@ -59,15 +68,21 @@ body{
 #meetings_div, #twitter_div{
     width: 400px;
     text-align: center;
-    margin: 0 auto;
+    margin: 0;
 }
 span{
     background-color: #55acee;
     padding: 10px;
     border-radius: 10px;
 }
+
 #meeting-info{
     text-align: left;
+    margin: 20px 0 50px 50px;
+}
+
+body.mobile #meeting-info{
+    margin: 0;
 }
 #meeting-info h3{
     margin-bottom: 30px;
